@@ -5,10 +5,12 @@ import static org.stellar.anchor.util.AssetHelper.toXdrAmount;
 import static org.stellar.sdk.xdr.OperationType.PAYMENT;
 import static org.stellar.sdk.xdr.SignerKeyType.*;
 
+import java.io.IOException;
 import java.time.Instant;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
-import lombok.Getter;
+import java.util.stream.IntStream;
 import org.stellar.anchor.api.exception.LedgerException;
 import org.stellar.anchor.config.AppConfig;
 import org.stellar.anchor.ledger.LedgerTransaction.LedgerOperation;
@@ -17,29 +19,26 @@ import org.stellar.anchor.ledger.LedgerTransaction.LedgerTransactionResponse;
 import org.stellar.anchor.util.AssetHelper;
 import org.stellar.anchor.util.MemoHelper;
 import org.stellar.sdk.*;
+import org.stellar.sdk.Transaction;
+import org.stellar.sdk.TrustLineAsset;
 import org.stellar.sdk.responses.AccountResponse;
 import org.stellar.sdk.responses.TransactionResponse;
 import org.stellar.sdk.responses.operations.OperationResponse;
 import org.stellar.sdk.responses.operations.PathPaymentBaseOperationResponse;
 import org.stellar.sdk.responses.operations.PaymentOperationResponse;
-import org.stellar.sdk.xdr.AssetType;
-import org.stellar.sdk.xdr.OperationType;
-import org.stellar.sdk.xdr.SignerKeyType;
+import org.stellar.sdk.xdr.*;
+import org.stellar.sdk.xdr.Memo;
 
 /** The horizon-server that implements LedgerClient. */
 public class Horizon implements LedgerClient {
-  @Getter private final String horizonUrl;
-  @Getter private final String stellarNetworkPassphrase;
   private final Server horizonServer;
 
-  public Horizon(String horizonUrl, String stellarNetworkPassphrase) {
-    this.horizonUrl = horizonUrl;
-    this.stellarNetworkPassphrase = stellarNetworkPassphrase;
+  public Horizon(String horizonUrl) {
     this.horizonServer = new Server(horizonUrl);
   }
 
   public Horizon(AppConfig appConfig) {
-    this(appConfig.getHorizonUrl(), appConfig.getStellarNetworkPassphrase());
+    this(appConfig.getHorizonUrl());
   }
 
   public Server getServer() {
@@ -103,20 +102,44 @@ public class Horizon implements LedgerClient {
   }
 
   @Override
-  public LedgerTransaction getTransaction(String txnHash) {
-    List<OperationResponse> operations =
-        getServer()
-            .payments()
-            .includeTransactions(true)
-            .forTransaction(txnHash)
-            .execute()
-            .getRecords();
-
-    if (operations.isEmpty()) {
-      return null;
+  public LedgerTransaction getTransaction(String txnHash) throws LedgerException {
+    TransactionResponse txnResponse = getServer().transactions().transaction(txnHash);
+    TransactionEnvelope txnEnv;
+    try {
+      txnEnv = TransactionEnvelope.fromXdrBase64(txnResponse.getEnvelopeXdr());
+    } catch (IOException ioex) {
+      throw new LedgerException("Unable to parse transaction envelope", ioex);
     }
 
-    TransactionResponse txnResponse = operations.get(0).getTransaction();
+    int applicationOrder =
+        TOID.fromInt64(Long.parseLong(txnResponse.getPagingToken())).getTransactionOrder();
+
+    Operation[] operations;
+    String sourceAccount;
+    Long sequenceNumber = txnResponse.getLedger();
+    Memo memo;
+
+    switch (txnEnv.getDiscriminant()) {
+      case ENVELOPE_TYPE_TX_V0:
+        operations = txnEnv.getV0().getTx().getOperations();
+        sourceAccount =
+            StrKey.encodeEd25519PublicKey(
+                txnEnv.getV0().getTx().getSourceAccountEd25519().getUint256());
+        memo = txnEnv.getV0().getTx().getMemo();
+        break;
+      case ENVELOPE_TYPE_TX:
+        operations = txnEnv.getV1().getTx().getOperations();
+        sourceAccount =
+            StrKey.encodeEd25519PublicKey(
+                txnEnv.getV1().getTx().getSourceAccount().getEd25519().getUint256());
+        memo = txnEnv.getV0().getTx().getMemo();
+        break;
+      default:
+        throw new LedgerException(
+            String.format(
+                "Malformed transaction detected. The transaction(hash=%s) has unknown envelope type.",
+                txnHash));
+    }
 
     return LedgerTransaction.builder()
         .hash(txnResponse.getHash())
@@ -124,11 +147,21 @@ public class Horizon implements LedgerClient {
             TOID.fromInt64(Long.parseLong(txnResponse.getPagingToken())).getTransactionOrder())
         .sourceAccount(txnResponse.getSourceAccount())
         .envelopeXdr(txnResponse.getEnvelopeXdr())
-        .memo(MemoHelper.toXdr(txnResponse.getMemo()))
+        .memo(memo)
         .sequenceNumber(txnResponse.getSourceAccountSequence())
         .createdAt(Instant.parse(txnResponse.getCreatedAt()))
         .operations(
-            operations.stream().map(Horizon::toLedgerOperation).collect(Collectors.toList()))
+            IntStream.range(0, operations.length)
+                .mapToObj(
+                    opIndex ->
+                        LedgerClientHelper.convert(
+                            sourceAccount,
+                            sequenceNumber,
+                            applicationOrder,
+                            opIndex + 1, // operation index is 1-based
+                            operations[opIndex]))
+                .filter(Objects::nonNull)
+                .toList())
         .build();
   }
 
